Update Footer Component

--- a/src/Components/Pages/Footer/Footer.css
+++ b/src/Components/Pages/Footer/Footer.css
@@ -1,4 +1,3 @@
-
 /* FOOTER SECTION STYLING */
 #footer-section {
     position: relative;
@@ -29,7 +28,7 @@
     padding: 10px 50px;
     color: black;
     border-radius: 5px;
-
+    cursor: pointer;
 }
 
 #footer-section #footer-description .footer-1 {
