--- a/src/Components/Pages/Home/Dashboard.css
+++ b/src/Components/Pages/Home/Dashboard.css
@@ -175,10 +175,9 @@
 .top-picks-card {
     width: 13em;
     height: 20em;
-    gap: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin: 2em;
     background: white;
@@ -187,6 +186,7 @@
 
 .top-picks-card img {
     width: 10em;
+    height: 10em;
     object-fit: contain;
 }
 
@@ -215,15 +215,13 @@
 }
 
 /* NEW-ARRIVALS STYLING */
-#new-arrivals,
-#summer-sales {
+#dashboard-dynamics {
     width: 100%;
     height: 100%;
     position: relative;
 }
 
-#new-arrivals-head,
-#summer-sales-head {
+#dashboard-dynamics-head {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -234,8 +232,7 @@
     position: relative;
 }
 
-#new-arrivals-head img,
-#summer-sales-head img {
+#dashboard-dynamics-head img {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -245,19 +242,16 @@
     z-index: -1;
 }
 
-#new-arrivals-head .blur-hash,
-#summer-sales-head .blur-hash {
+#dashboard-dynamics-head .blur-hash {
     position: absolute !important;
     z-index: -1;
 }
 
-#new-arrivals-head div h1,
-#summer-sales-head div h1 {
+#dashboard-dynamics-head div h1 {
     font-size: 3.5em;
 }
 
-#new-arrivals-head div p,
-#summer-sales-head div p {
+#dashboard-dynamics-head div p {
     background-color: #ffb8b8;
 }
 
