--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,9 @@
 
 input {
     background: rgb(231, 231, 231);
-    border: 0;
     padding: 10px 15px 10px 8px;
+    border: 0;
+    transition: .5s ease;
 }
 
 label {
@@ -38,8 +39,9 @@ label {
 }
 
 input:focus {
-    transition: 0.4s ease;
-    outline: 0
+    transition: 0.5s ease;
+    outline: 0;
+    border-radius: 5px;
 }
 
 input:focus::placeholder {
