--- a/src/Components/Pages/Profile/Profile.css
+++ b/src/Components/Pages/Profile/Profile.css
@@ -149,7 +149,7 @@
 .updates {
     display: flex;
     width: 20em;
-    justify-content: flex-start;
+    justify-content: center;
     position: relative;
 }
 
@@ -182,6 +182,13 @@
 .updates input {
     height: 2.5em;
     border-radius: 0;
+    background-color: rgb(189 189 189);
+}
+
+.password-class-for-styling {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
 
 /* USER PRODUCTS SECTION STYLING */
@@ -246,6 +253,11 @@
     align-items: center;
     padding: 4em 2em;
     flex-direction: column-reverse;
+}
+
+#re-order-button {
+    background-color: black;
+    color: white;
 }
 
 .extra-details {
