--- a/src/Components/Pages/Home/Dashboard.css
+++ b/src/Components/Pages/Home/Dashboard.css
@@ -184,12 +184,22 @@
     z-index: -1;
 }
 
+.dashboard-dynamics-head>div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
 .dashboard-dynamics-head div h1 {
     font-size: 3.5em;
 }
 
 .dashboard-dynamics-head div p {
     background-color: #ffb8b8;
+    text-align: center;
+    width: fit-content;
+    padding: 0em 1em;
 }
 
 /* SUMMER SALES STYLING */
