--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -136,6 +136,13 @@
     margin: 0;
     width: 25em;
     border-radius: 0;
+    border-top-right-radius: 0%;
+    border-bottom-right-radius: 0%;
+}
+
+#search-bar button {
+    border-top-left-radius: 0%;
+    border-bottom-left-radius: 0%;
 }
 
 #search-bar button,
