--- a/src/Components/Pages/Profile/Profile.css
+++ b/src/Components/Pages/Profile/Profile.css
@@ -408,7 +408,9 @@
     position: absolute;
     right: 2%;
     top: 3%;
+    font-size: .8em;
     cursor: pointer;
+    font-weight: lighter;
 }
 
 .line {
