--- a/src/Components/Pages/Profile/Profile.css
+++ b/src/Components/Pages/Profile/Profile.css
@@ -77,6 +77,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
 }
 
 .profile-loader-lottie {
@@ -398,6 +399,7 @@
     flex-direction: column;
     width: 100%;
     padding-right: 2em;
+    max-width: 30em;
 }
 
 #slid-up-details>* {
