--- a/src/Components/Pages/Products/Products.css
+++ b/src/Components/Pages/Products/Products.css
@@ -49,6 +49,7 @@
 }
 
 .product {
+    height: 25em;
     width: 12em;
     display: flex;
     flex-direction: column;
@@ -77,7 +78,7 @@
 .product img,
 .product .blur-hash {
     width: 100% !important;
-    height: 12em !important;
+    height: 50% !important;
     object-fit: contain;
 }
 
